663
Fixed in r17241.
```scala
scala> <foo bar="&"/>
<console>:1: error: in XML literal: error parsing attribute value
       <foo bar="&"/>
                  ^
```
